<resources>
    <string name="app_name">Critical Roll</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="miss">Critical Miss!</string>
    <string name="hit">Critical Hit!</string>
    <string name="blank"> </string>
    <string name="howto">Tap the die to roll !</string>
    <string name="timesTotal">Total rolls: 0</string>
    <string name="times1">1\'s rolled: 0</string>
    <string name="times2">2\'s rolled: 0</string>
    <string name="times3">3\'s rolled: 0</string>
    <string name="times4">4\'s rolled: 0</string>
    <string name="times5">5\'s rolled: 0</string>
    <string name="times6">6\'s rolled: 0</string>
    <string name="times7">7\'s rolled: 0</string>
    <string name="times8">8\'s rolled: 0</string>
    <string name="times9">9\'s rolled: 0</string>
    <string name="times10">10\'s rolled: 0</string>
    <string name="times11">11\'s rolled: 0</string>
    <string name="times12">12\'s rolled: 0</string>
    <string name="times13">13\'s rolled: 0</string>
    <string name="times14">14\'s rolled: 0</string>
    <string name="times15">15\'s rolled: 0</string>
    <string name="times16">16\'s rolled: 0</string>
    <string name="times17">17\'s rolled: 0</string>
    <string name="times18">18\'s rolled: 0</string>
    <string name="times19">19\'s rolled: 0</string>
    <string name="times20">20\'s rolled: 0</string>
    <string name="shared_prefs_key">Critical Roll</string>
</resources>
